--- a/ComputerNetworkSimulation.vcxproj.filters
+++ b/ComputerNetworkSimulation.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Computer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\OneDrive\School_Docs\MSIM Classes\MSIM331_Simulation_Software_Design\Homework 3\SimulationExecutive\HW3Test\Distribution.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
