--- a/ComputerNetworkSimulation.vcxproj
+++ b/ComputerNetworkSimulation.vcxproj
@@ -127,15 +127,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Computer.cpp" />
     <ClCompile Include="Distribution.cpp" />
     <ClCompile Include="EventSet.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Message.cpp" />
+    <ClCompile Include="Network.cpp" />
     <ClCompile Include="SimulationExecutive.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Computer.h" />
     <ClInclude Include="Distribution.h" />
     <ClInclude Include="EventSet.h" />
+    <ClInclude Include="FIFO.h" />
+    <ClInclude Include="Message.h" />
+    <ClInclude Include="Network.h" />
     <ClInclude Include="SimulationExecutive.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
