--- a/ComputerNetworkSimulation.vcxproj.filters
+++ b/ComputerNetworkSimulation.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="Network.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Stats.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
