--- a/ComputerNetworkSimulation.vcxproj
+++ b/ComputerNetworkSimulation.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="Message.cpp" />
     <ClCompile Include="Network.cpp" />
     <ClCompile Include="SimulationExecutive.cpp" />
+    <ClCompile Include="Stats.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Computer.h" />
