--- a/ComputerNetworkSimulation.vcxproj.filters
+++ b/ComputerNetworkSimulation.vcxproj.filters
@@ -67,5 +67,8 @@
     <ClCompile Include="SimulationExecutive.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Stats.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
